add <title> to blog posts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,5 @@
   },
   "typescript.tsdk": ".yarn/sdks/typescript/lib",
   "typescript.enablePromptUseWorkspaceTsdk": true,
-  "editor.fontSize": 16,
-  "editor.rulers": {},
-  "editor.renderLineHighlight": "line"
+  "editor.fontSize": 12
 }
