--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@heroicons/react": "^2.0.18",
     "@radix-ui/colors": "^0.1.8",
     "@stitches/react": "^1.2.8",
+    "classnames": "^2.3.2",
     "gatsby": "^5.6.0",
     "gatsby-plugin-image": "^3.6.0",
     "gatsby-plugin-sharp": "^5.6.0",
@@ -27,15 +28,21 @@
     "gatsby-remark-images": "^7.6.0",
     "gatsby-remark-vscode": "^3.3.1",
     "gatsby-source-filesystem": "^5.6.0",
+    "gatsby-theme-stitches": "^1.0.1",
     "gatsby-transformer-remark": "^6.6.0",
     "gatsby-transformer-sharp": "^5.6.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^1.13.2"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "autoprefixer": "^10.4.14",
+    "gatsby-plugin-postcss": "^6.11.0",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
     "typescript": "^4.9.5"
   }
 }
