--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@heroicons/react": "^2.0.18",
     "@radix-ui/colors": "^0.1.8",
     "@stitches/react": "^1.2.8",
+    "@vercel/analytics": "^1.0.2",
     "classnames": "^2.3.2",
     "gatsby": "^5.6.0",
     "gatsby-plugin-image": "^3.6.0",
